# Attoworld

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: calibrate_spectrometer.py  frog.py  numeric.py
python/: test_notebook.py
python/attoworld/data/: __init__.py  complex_envelope.py  complex_spectrum.py  data_structures.py  decorators.py  file_io.py  frog_data.py  intensity_spectrum.py  interop.py  luna_result.py  spectrogram.py  spectrometer_calibration.py  spectrometer_calibration_dataset.py  waveform.py
python/attoworld/file/: FROG_result.py  __init__.py  data_structures.py  dataclasses.py  file_io.py  interface_simulations.py  profileAndIntensity.py
python/attoworld/numeric/: __init__.py  atomic_units.py  numeric.py
python/attoworld/personal/marco/: trace_handler.py
python/attoworld/personal/nick/: __init__.py  impulse_response.py  nick.py
python/attoworld/personal/vlad/: __init__.py
python/attoworld/plot/: __init__.py  plot.py
python/attoworld/spectrum/: VISSpectrumAnalysis.py  __init__.py  spectrum.py
python/attoworld/spectrum/calibration_data/: MPQ_Atto_Maya_184_1101nm.npz  __init__.py
python/attoworld/wave/: __init__.py  frog.py  time_frequency.py  trace_handler.py
src/: lib.rs  test_notebook.py
src/attoworld/file/: FROG_result.py  interface_simulations.py  profileAndIntensity.py
src/attoworld/numeric/: numeric.py
src/attoworld/spectrum/: UVSpectrumAnalysis.py
src/frog/: core.rs  mod.rs  ptychographic.rs
src/stencil/: mod.rs  rayon_wasm_shim.rs  stencil.rs
tests/: demo_notebook.py
(+1 files in other folders)
