[package]
name = "attoworld"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "attoworld"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.28.0"
pyo3 = "0.28.3"
rand = "0.10.1"
rayon = "1.12.0"
rustfft = { version = "6.4.1", features = ["wasm_simd"] }
